# deluge-embassy

./: .gitignore  Cargo.toml  README.md
.cargo/: config.toml
.github/: dependabot.yml
.github/workflows/: ci.yml  firmware.yml
deluge-bsp/: Cargo.toml  README.md
deluge-bsp/src/: controls.rs  encoder.rs  lib.rs  oled.rs  pic.rs  sd.rs  system.rs
deluge-bsp/src/usb/: host.rs
deluge-bsp/src/usb/classes/: audio.rs  midi.rs  mod.rs
deluge-fft/: Cargo.toml
demo-firmware/: Cargo.toml
demo-firmware/src/: main.rs
demo-firmware/src/tasks/: cdc.rs  encoder.rs  oled.rs  pic.rs
rza1l-hal/: Cargo.toml  rza1l.x  rza1l_rtt.x
rza1l-hal/src/: lib.rs  scux.rs  ssi.rs  startup.rs  uart.rs
