[workspace]
members = ["demo-firmware", "rza1l-hal", "deluge-bsp", "deluge-fft"]
resolver = "2"

[workspace.package]
license = "MIT OR Apache-2.0"

[profile.release]
opt-level = "s"
lto = true
codegen-units = 1
debug = true

[profile.release.package.deluge-fft]
opt-level = 3

[profile.dev]
opt-level = 1
debug = true
